# transaction-receipt-relayer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix  ggxchain-config.brooklyn.toml  ggxchain-config.sydney.toml  ggxchain-config.toml  helios.toml  run_relayer.sh  watch-dog-config.toml
.github/workflows/: cd.yaml  ci.yaml
chain-extension/: Cargo.toml
chain-extension/contract/: Cargo.toml  dog.sol  lib.rs
chain-extension/src/: lib.rs
client/: Cargo.toml
merkle/: Cargo.toml
merkle-proofs/: Cargo.toml
merkle/src/: lib.rs  node.rs  trie.rs
merkle/tests/: common.rs  merkle-proof-verify.rs
merkle/tests/suits/: block_17819525.json  block_17819525_receipts.json  block_18027905_receipts.json  block_8652100.json
pallet/: Cargo.toml
pallet/src/: lib.rs
pallet/tests/: mock.rs  test_utils.rs  tests.rs
precompile/: Cargo.toml  EthReceiptProvider.sol
precompile/examples/: example-contract.sol
precompile/src/: lib.rs
relayer/: Cargo.toml
relayer/metadata/: eth-receipt-metadata.scale
relayer/src/: bloom_processor.rs  client.rs  common.rs  config.rs  consts.rs  db.rs  main.rs  merkle.rs  server.rs  substrate_client.rs
relayer/src/sql/: schema.sql
src/: client.rs  config.rs  db.rs  main.rs
storage/: Cargo.toml
types/: Cargo.toml
types/src/: block_header.rs  bloom.rs  encode.rs  lib.rs  primitives.rs  receipt.rs  receipt_merkle_proof.rs  tx_type.rs
types/src/receipt/: log.rs  receipt_merkle_proof.rs  transaction_receipt.rs  tx_type.rs
types/src/receipt/trie/: branch.rs  extension.rs  leaf.rs  mod.rs  nibble.rs
types/tests/: common.rs  merkle-proof-verify.rs
types/tests/suits/: block_18027905.json
