[workspace]
resolver = "2"
members = ["relayer", "types", "pallet", "storage", "client"]

[workspace.package]
authors = ["Golden Gate"]
edition = "2021"
repository = "https://github.com/ggxchain/transaction-receipt-relayer"

[workspace.dependencies]
alloy-rlp = { version = "0.3.2", features = ["derive"] }
bytes = "1.4.0"
clap = { version = "4.3", features = ["derive"] }
env_logger = "0.10.0"
envy = "0.4.2"
ethers = "2.0.7"
eyre = "0.6.8"
helios = { git = "https://github.com/a16z/helios.git", tag = "0.4.1" }
hex = "0.4"
hex-literal = "0.4.1"
keccak-hash = "0.10.0"
log = "0.4.7"
merkle-cbt = "0.3.2"
rusqlite = "0.29.0"
salvo = "0.44.1"
serde = "1.0.164"
serde_json = "1.0.97"
sha3 = "0.10.8"
signal-hook = "0.3.15"
tokio = "1.28.2"
proptest = "1.0.0"
test-strategy = "0.3.0"
serde-big-array = "0.5.0"
ethbloom = { version = "0.13.0", default-features = false }
toml = "0.7"
tempfile = "3.8"

types = { path = "types" }

cita_trie = { git = "https://github.com/ggxchain/cita-trie.git", branch = "cita-trie-extended-pub" }
hasher = "0.1"

[patch."https://github.com/a16z/helios.git"]
helios = { git = "https://github.com/andor0/helios.git", branch = "max-supported-logs-number-as-environ-variable" }
