[workspace]
resolver = "2"
members = [
    "relayer",
    "types",
    "pallet",
    "merkle",
    "precompile",
    "chain-extension",
]

[workspace.package]
authors = ["Golden Gate"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ggxchain/transaction-receipt-relayer"

[workspace.dependencies]
num_enum = { version = "0.5.3", default-features = false }
alloy-rlp = { version = "0.3.2", default-features = false, features = [
    "derive",
] }
parity-scale-codec = { version = "3", default-features = false, features = [
    "derive",
    "max-encoded-len",
] }
clap = { version = "4.3", features = ["derive"] }
env_logger = "0.10.0"
ethers = "2.0.7"
eyre = "0.6.8"
helios = { git = "https://github.com/a16z/helios.git", tag = "0.5.5" }
hex = "0.4"
hex-literal = "0.4.1"
keccak-hash = { version = "0.10.0", default-features = false }
log = "0.4.7"
rusqlite = "0.28.0"
scale-info = { version = "2.1.1", default-features = false, features = [
    "derive",
] }
serde = { version = "1.0.164", default-features = false }
serde_json = { version = "1.0.97", default-features = false }
signal-hook = "0.3.15"
tokio = "1.28.2"
proptest = "1.0.0"
test-strategy = "0.3.0"
serde-big-array = { version = "0.5.0", default-features = false }
ethbloom = { version = "0.13.0", default-features = false }
toml = "0.7"
tempfile = "3.8"
rand = "0.7"
cita_trie = { git = "https://github.com/ggxchain/cita-trie.git", branch = "cita-trie-extended-pub" }
hasher = "0.1"
subxt = { version = "0.31.0" }
subxt-signer = { version = "0.31.0", features = ["subxt"] }
futures = "0.3"


# Substrate FRAME
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
pallet-contracts = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }

# Frontier
pallet-evm = { version = "6.0.0-dev", git = "https://github.com/AstarNetwork/frontier.git", branch = "polkadot-v0.9.43", default-features = false }
fp-evm = { version = "3.0.0-dev", git = "https://github.com/AstarNetwork/frontier.git", branch = "polkadot-v0.9.43", default-features = false }
precompile-utils = { version = "0.5", git = "https://github.com/AstarNetwork/Astar", rev = "df73ca435bbfa30548bb2446b5dbb58492c928bb", default-features = false }

# webb-tools
eth-types = { git = "https://github.com/ggxchain/pallet-eth2-light-client.git", branch = "polkadot-v0.9.43", default-features = false, features = [
    "eth2",
] }
consensus = { package = "webb-consensus-types", git = "https://github.com/ggxchain/pallet-eth2-light-client.git", branch = "polkadot-v0.9.43", default-features = false }
pallet-eth2-light-client = { git = "https://github.com/ggxchain/pallet-eth2-light-client.git", branch = "polkadot-v0.9.43", default-features = false }
webb-proposals = { git = "https://github.com/ggxchain/webb-rs.git", branch = "polkadot-v0.9.43", default-features = false }


types = { path = "types", default-features = false }
merkle-generator = { path = "merkle" }
pallet-receipt-registry = { path = "pallet", default-features = false }

# There is a build script that loads data from the txt file and generates rust code.
# The build script is not needed as the data is already generated and checked in, but it breaks nix builds.
# So, I have disabled the build script for now.
[patch."https://github.com/bluealloy/revm.git"]
revm-primitives = { git = "https://github.com/ggxchain/revm", branch = "fix" }
