[package]
name = "pallet-chain-extension-receipt-registry"
version.workspace = true
description = "Chain extension for pallet-receipt-registry"
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
frame-support = { workspace = true }
frame-system = { workspace = true }
log = { workspace = true }
pallet-contracts = { workspace = true }
pallet-contracts-primitives = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sp-core = { workspace = true }

pallet-receipt-registry.workspace = true
types.workspace = true
webb-proposals.workspace = true

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-contracts/std",
    "pallet-contracts-primitives/std",
    "scale-info/std",
    "sp-core/std",
    "types/std",
    "webb-proposals/std",
    "pallet-receipt-registry/std",
]
