[package]
name = "merkle-generator"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
alloy-rlp.workspace = true
types.workspace = true
serde.workspace = true


[dev-dependencies]
rand.workspace = true
hex.workspace = true
cita_trie.workspace = true
ethers.workspace = true
serde_json.workspace = true
hasher = { workspace = true, features = ["hash-keccak"] }
