[package]
name = "pallet-receipt-registry"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde_json.workspace = true
parity-scale-codec.workspace = true
scale-info.workspace = true
webb-proposals.workspace = true
eth-types.workspace = true
frame-support.workspace = true
frame-system.workspace = true
sp-std.workspace = true
sp-core.workspace = true

types.workspace = true
pallet-eth2-light-client.workspace = true

[dev-dependencies]
ethers.workspace = true
consensus.workspace = true
pallet-balances.workspace = true
types = { workspace = true, features = [
	"merkle-proof",
	"serde",
], default-features = false }
hex.workspace = true
hex-literal.workspace = true

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"scale-info/std",
	"webb-proposals/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"sp-std/std",
	"sp-core/std",
	"pallet-eth2-light-client/std",
	"eth-types/std",
]

try-runtime = ["frame-support/try-runtime"]
