[package]
name = "pallet-receipt-registry"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec.workspace = true
scale-info.workspace = true
webb-proposals = { workspace = true, features = ["scale"] }
frame-support.workspace = true
frame-system.workspace = true
serde_json = { workspace = true, features = ["alloc"] }

types = { workspace = true, default-features = false, features = ["serde"] }
pallet-eth2-light-client.workspace = true

[dev-dependencies]
# for some reasons, alloy-rlp.workspace = true puts a warning
alloy-rlp = { workspace = true }
ethers.workspace = true
consensus.workspace = true
pallet-balances.workspace = true
hex.workspace = true
hex-literal.workspace = true
merkle-generator.workspace = true
eth-types.workspace = true
sp-core.workspace = true


[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"scale-info/std",
	"webb-proposals/std",
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"serde_json/alloc",
	"pallet-eth2-light-client/std",
	"types/std",
]

try-runtime = ["frame-support/try-runtime"]
