[package]
name = "pallet-evm-eth-receipt-provider"
description = "A Precompile to make pallet-receipt-registry accessible to pallet-evm"
version.workspace = true
publish = false
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
num_enum.workspace = true
log.workspace = true

# Moonbeam
precompile-utils.workspace = true

# Substrate
frame-support.workspace = true
frame-system.workspace = true
pallet-receipt-registry.workspace = true
sp-core.workspace = true
types.workspace = true
webb-proposals.workspace = true

# Frontier
fp-evm.workspace = true
pallet-evm.workspace = true

[dev-dependencies]
hex-literal.workspace = true
serde.workspace = true

[features]
default = ["std"]
std = [
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"precompile-utils/std",
	"sp-core/std",
	"pallet-receipt-registry/std",
	"types/std",
	"webb-proposals/std",
	"num_enum/std",
]
