[package]
name = "eth-transaction-receipt-relayer"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
env_logger.workspace = true
envy.workspace = true
ethers.workspace = true
eyre.workspace = true
helios.workspace = true
clap.workspace = true
# Helios doesn't do a pub interface to the node that operates on `payload` level
helios-client.workspace = true
log.workspace = true
merkle-cbt.workspace = true
rusqlite.workspace = true
salvo = { workspace = true, features = ["affix", "eyre"] }
serde.workspace = true
serde_json.workspace = true
sha3.workspace = true
signal-hook.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
hex.workspace = true

[dev-dependencies]
hex-literal.workspace = true
