[package]
name = "eth-transaction-receipt-relayer"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
env_logger.workspace = true
ethers.workspace = true
eyre.workspace = true
helios.workspace = true
clap.workspace = true
log.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
signal-hook.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
hex.workspace = true
toml.workspace = true
alloy-rlp.workspace = true
subxt.workspace = true
subxt-signer.workspace = true
futures.workspace = true

types = { workspace = true, features = ["std"] }
merkle-generator.workspace = true

[dev-dependencies]
hex-literal.workspace = true
proptest.workspace = true
test-strategy.workspace = true
tempfile.workspace = true
