[package]
name = "types"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
debug = []
merkle-proof = ["dep:cita_trie", "dep:hasher"]
serde = ["dep:serde", "dep:serde-big-array"]
std = ["serde/std"]

[dependencies]
alloy-rlp.workspace = true
parity-scale-codec.workspace = true
scale-info.workspace = true
bytes.workspace = true
keccak-hash.workspace = true
cita_trie = { workspace = true, optional = true }
hasher = { workspace = true, optional = true }
ethbloom.workspace = true
# Optional deps 
serde = { workspace = true, optional = true, default-features = false }
serde-big-array = { workspace = true, optional = true, default-features = false }

[dev-dependencies]
ethers.workspace = true
proptest.workspace = true
test-strategy.workspace = true
hex-literal.workspace = true
serde_json.workspace = true
hex.workspace = true
cita_trie.workspace = true
hasher.workspace = true
types = { path = ".", features = ["merkle-proof"] }
