[package]
name = "types"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
debug = []
serde = ["dep:serde", "serde/std", "dep:serde-big-array"]
std = ["serde"]

[dependencies]


alloy-rlp.workspace = true
parity-scale-codec.workspace = true
scale-info.workspace = true
bytes.workspace = true
keccak-hash.workspace = true
ethbloom.workspace = true
# Optional deps 
serde = { workspace = true, optional = true, default-features = false }
serde-big-array = { workspace = true, optional = true, default-features = false }

[dev-dependencies]
ethers.workspace = true
proptest.workspace = true
test-strategy.workspace = true
hex-literal.workspace = true
serde_json.workspace = true
hex.workspace = true
cita_trie.workspace = true
hasher.workspace = true
